# sakura

./: .gitignore  CMakeLists.txt  README.md  example.cpp  flake.nix  main.cpp  sakura.cpp  sakura.hpp
.cache/clangd/index/: example.cpp.A62EDF957956D933.idx  sakura.cpp.2321B2193BCD984F.idx  sakura.hpp.23A45A72793557FB.idx
